Installer updated for Repast Simphony 2.7